Fix wrapped progress text when user resizing

--- a/thiamsu/static/thiamsu/css/main.css
+++ b/thiamsu/static/thiamsu/css/main.css
@@ -495,6 +495,7 @@
     position: relative;
     margin-top: 4px;
     background-color: #5fa490;
+    overflow: hidden;
 }
 
 /* Song List - Song - Translation Progress */
@@ -514,6 +515,10 @@
 	font-weight: 500;
 	letter-spacing: 0.6px;
 	color: #ffffff;
+
+    display: flex;
+    flex-wrap: wrap-reverse;
+    line-height: 22px;
 }
 
 /* Song List - Pagination */
